# Thesis-Copilot

./: .gitignore  AI论文查重降重研究.md  README.md
backend/: pyproject.toml
backend/assets/prompts/: README.md  abstract.json  aigc_reduction.json  block_generation.json  chunk_plan.json  compression.json  outline.json  reference_recommendation.json
backend/assets/templates/: README.md  qnu-undergraduate-v1.docx
backend/src/qnu_copilot/: __init__.py  app.py  main.py
backend/src/qnu_copilot/api/: __init__.py  aigc_routes.py  config_models.py  config_routes.py  models.py  (+1 more)
backend/src/qnu_thesis_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_api.py  test_chunk_generation.py  test_contracts.py  test_outline.py  test_references.py  test_workspace.py
docx_automation_service/: .env  .env.example  .gitignore  README.md  pyproject.toml
docx_automation_service/.runtime/5ec5fc50-23e2-4c08-81f1-f122ffd2ae5d/: report.json  rewritten.docx
docx_automation_service/.runtime/c09207e8-8667-4936-a463-376ab045055c/: report.json  rewritten.docx
docx_automation_service/.runtime/uploads/: a0f54071-bd35-4dfa-95b4-1f2dfd1fd670.docx
docx_automation_service/assets/prompts/: aigc_reduction.json
docx_automation_service/src/docx_automation_service/: main.py
docx_automation_service/src/docx_automation_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docx_automation_service/tests/: test_async_runs.py  test_docx_mapper_citations.py  test_health.py  test_text_guard.py  test_three_layer_pipeline.py
(+62 files in other folders)
